--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
-    "react-responsive": "^10.0.1"
+    "react-responsive": "^10.0.1",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
